--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>ONG VIE</title>
 </head>
 <body>
-    <header class="flex">
-<ul>
-    <h1>ONG VIE Groupe</h1>
-    <li>Acueil</li>
+    <header>
+    
+<h1>ONG VIE Groupe</h1>
+
+<ul>  
+<li class="box7">Acueil</li>
 <li>A Propos de nous</li>
 <li>nos contacts</li>
 </ul>
@@ -51,12 +53,13 @@
 </nav>
 
 <nav class="pav2">
-    <img src="/image/chateau.jpeg" width="250" height="200" border="10" alt="oups">
-    <img src="/image/images1 .jpeg" width="250" height="200" border="10" alt="oups">
-    <img src="/image/triomphe.jpg" width="250" height="200" border="10" alt="oups">
-    <img src="/image/White house .jpg" width="250" height="200" border=10 alt="oups">
+    <img src="image/chateau.jpeg" width="250" height="200" border="10" alt="oups">
+    <img src="image/images1 .jpeg" width="250" height="200" border="10" alt="oups">
+    <img src="image/triomphe.jpg" width="250" height="200" border="10" alt="oups">
+    <img src="image/White house .jpg" width="250" height="200" border=10 alt="oups">
+<img src="image/White house .jpg"width=300 height="250" border=10 alt="oups">
 </nav>
-
+<img src="/imag
 <nav class="pav3">
     <table border="1">
 <thead>
